[package]
name = "spin_sleep_tokio"
version = "2.1.1"
authors = ["Kogepan229 <kogepan25629@gmail.com>"]
edition = "2021"
description = "Accurate sleeping. Only use native sleep as far as it can be trusted, then spin."
repository = "https://github.com/Kogepan229/spin-sleep-tokio"
keywords = ["sleep"]
license = "Apache-2.0"
readme = "README.md"

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "mmsystem", "timeapi"] }
once_cell = "1"

[dev-dependencies]
approx = "0.5"

[features]
# Controls certain tests that are not deterministic
nondeterministic_tests = []
